top banner added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ButterCup portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <section class="background-banner">
+<div class="one">
+    <h1>Welcome to</h1>
+    <h1><span class="green">ButterCup</span> World</h1>
+    <h3>The buttercups across the field Made sunshine rifts of splendor. </h3>
+    <p>I am a tough toddler. When faced with a problem, I will almost always resort to bloody violence. I take things more seriously than my sisters, and spends more time frowning than the other two. I also have something of a cruel streak, and a foul temper. Just like a real five-year-old.</p>
+    <a class="link-button" target="_blank" href="https://www.facebook.com/tasnim.zamanshorna51">HIRE ME</a>
+</div>
+<div class="one"> <img src="images/buttercup.png" alt=""></div>
+    </section>
 </body>
 </html>
